alignment issue resolved in layout

--- a/src/pages/chats/Chats.module.css
+++ b/src/pages/chats/Chats.module.css
@@ -202,7 +202,8 @@
 }
 
 .chatimg{
-  height: 28px;
+  height: 40px;
+  width:200px;
   margin-left: -7px;
   margin-bottom: 4px;
 }
